ATLAS-3458: better guards